tests/ui/impl-opt-out-trait.stderr
error: `?Trait` bounds are only permitted at the point where a type parameter is declared
 --> tests/ui/impl-opt-out-trait.rs:7:16
  |
7 | #[penum[ (impl ?Sized) ]]
  |                ^^^^^^
